--- a/Projeto 01/index.html
+++ b/Projeto 01/index.html
@@ -7,9 +7,48 @@
   <body>
     <header>
       <div class="switch">
-        <div class="flicker"</div>
+        <div class="flicker"></div>
+        <div class="moon"></div>
       </div>
     </header>
-  <script scr="scripts.js"></script>
+
+    <section class="main">
+      <div class="main-text">
+        <h1>Melissa Lopes</h1>
+        <p>Welcome to my page!</p>
+        <br>
+        <p>I am Front-End Developer from Brazil</p>
+        <br>
+        <a>Contact me</a>
+      </div>
+    </section>
+
+    <section class="dub-section">
+      <div class="square">
+        <h2>About<h2>
+        <p>Former fashion designer into tech world</p>
+        <br>
+        <a href="">Check it Out</a>
+      </div>
+      <div class="square">
+        <h2>About<h2>
+        <p>Former fashion designer into tech world</p>
+        <br>
+        <a href="">Check it Out</a>
+      </div>
+      <div class="square">
+        <h2>About<h2>
+        <p>Former fashion designer into tech world</p>
+        <br>
+        <a href="">Check it Out</a>
+      </div>
+      <div class="square">
+        <h2>About<h2>
+        <p>Former fashion designer into tech world</p>
+        <br>
+        <a href="">Check it Out</a>
+      </div>
+    </section>
+    <script src="scripts.js"></script>
   </body>
 </html>
