--- a/Projeto 01/index.html
+++ b/Projeto 01/index.html
@@ -17,34 +17,34 @@
         <h1>Melissa Lopes</h1>
         <p>Welcome to my page!</p>
         <br>
-        <p>I am Front-End Developer from Brazil</p>
+        <p>I am web developer & creative coder from Brazil</p>
         <br>
-        <a>Contact me</a>
+        <a>Contact me ></a>
       </div>
     </section>
 
-    <section class="dub-section">
+    <section class="sub-section">
       <div class="square">
-        <h2>About<h2>
-        <p>Former fashion designer into tech world</p>
+        <h2>Payment Dashboard<h2>
+        <p>A B2B Payment Tracker</p>
         <br>
         <a href="">Check it Out</a>
       </div>
       <div class="square">
-        <h2>About<h2>
-        <p>Former fashion designer into tech world</p>
+        <h2>Burguer App<h2>
+        <p>App for Rating Burgers</p>
         <br>
         <a href="">Check it Out</a>
       </div>
       <div class="square">
-        <h2>About<h2>
-        <p>Former fashion designer into tech world</p>
+        <h2>News App<h2>
+        <p>An App To Track News</p>
         <br>
         <a href="">Check it Out</a>
       </div>
       <div class="square">
-        <h2>About<h2>
-        <p>Former fashion designer into tech world</p>
+        <h2>Dating App<h2>
+        <p>An App for Dates</p>
         <br>
         <a href="">Check it Out</a>
       </div>
