--- a/Projeto 01/index.html
+++ b/Projeto 01/index.html
@@ -3,7 +3,9 @@
     <meta charset="UTF-8">
     <title>Light and Dark Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
+
   <body>
     <header>
       <div class="switch">
@@ -19,36 +21,49 @@
         <br>
         <p>I am web developer & creative coder from Brazil</p>
         <br>
-        <a>Contact me ></a>
+        <a href="#footer">Contact me ></a>
       </div>
+
+      <div class="hero-image">
+        <div class="cube" id="react"></div>
+        <div class="cube" id="javascript"></div>
+        <div class="cube" id="html"></div>
+        <div class="cube" id="css"></div>
+      </div>
+
     </section>
 
     <section class="sub-section">
-      <div class="square">
+      <div class="square" id="revenoo">
         <h2>Payment Dashboard<h2>
         <p>A B2B Payment Tracker</p>
         <br>
         <a href="">Check it Out</a>
       </div>
-      <div class="square">
+      <div class="square" id="burgerrator">
         <h2>Burguer App<h2>
         <p>App for Rating Burgers</p>
         <br>
         <a href="">Check it Out</a>
       </div>
-      <div class="square">
+      <div class="square" id="news">
         <h2>News App<h2>
         <p>An App To Track News</p>
         <br>
         <a href="">Check it Out</a>
       </div>
-      <div class="square">
+      <div class="square" id="dates">
         <h2>Dating App<h2>
         <p>An App for Dates</p>
         <br>
         <a href="">Check it Out</a>
       </div>
     </section>
+
+    <footer id="footer">
+      <p>melissalopesm@yahoo.com.br</p>
+    </footer>
+
     <script src="scripts.js"></script>
   </body>
 </html>
